--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 body {
-  background-image: url("./img/zwartevilt.png");
+  background: rgb(20,20,20);
+  background: -moz-linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
+  background: linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#141414",endColorstr="#6e6e6e",GradientType=1);
 }
 
 H1 {
@@ -25,7 +29,7 @@ header {
 
 .container {
   position: relative;
-  background-image: url("./img/cartographer.png");
+  background-image: url("./img/dark-panels.jpg");
   background-repeat: repeat-y repeat-x;
   min-height: 100vh;
 }
