--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-  background: rgb(20,20,20);
-  background: -moz-linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
-  background: -webkit-linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
-  background: linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(110,110,110,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#141414",endColorstr="#6e6e6e",GradientType=1);
+  background: rgb(20,0,0);
+  background: -moz-linear-gradient(180deg, rgba(20,0,0,1) 0%, rgba(92,0,0,1) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(20,0,0,1) 0%, rgba(92,0,0,1) 100%);
+  background: linear-gradient(180deg, rgba(20,0,0,1) 0%, rgba(92,0,0,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#140000",endColorstr="#5c0000",GradientType=1);
 }
 
 H1 {
@@ -25,6 +25,10 @@ p {
 
 header {
   width: 100%;
+}
+
+.row {
+  position: relative;
 }
 
 .container {
