Remove unnecessary jquery cnd

--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,8 @@ never notice it. */
 
 .social {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0;
+  right: 0;
   margin: 5%;
   text-align: right;
 }
