--- a/styles.css
+++ b/styles.css
@@ -152,8 +152,10 @@ never notice it. */
 .post {
   background: #464646;
   margin: 5%;
+  padding-bottom: 10px;
   border: #aaaaaa solid 1px;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .post-title {
@@ -173,9 +175,15 @@ never notice it. */
 .lead-photo {
   float: left;
   width: 40%;
-  height: auto;
-  margin-left: 10px;
-  margin-right: 10px;
+  height: max-content;
+  MARGIN: 10px;
+}
+
+.repo-link a {
+  color: whitesmoke;
+  font-size: large;
+  text-align: right;
+  text-decoration: none;
 }
 
 .fa-brands {
