--- a/templates/top.html
+++ b/templates/top.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Racing+Sans+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href=".css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <title>The Burning Road Blog</title>
 </head>
 <body>
   <div class="container">
     <div class="row">
       <header class="col-sm-12">
-        <img src="./img/vineyardoverpass.jpg" alt="Vineyard Street overpass at night" class="responsive">
+        <img src="img/vineyardoverpass.jpg" alt="Vineyard Street overpass at night" class="responsive">
         <div class="social">
           <a href="https://www.linkedin.com/in/wendell-yamada/" alt="LinkedIn Profile">
             <i class="fa-brands fa-linkedin"></i>
