remove error in top.html

--- a/templates/top.html
+++ b/templates/top.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <header class="col-sm-12">
-        <img src="img/vineyardoverpass.jpg" alt="Vineyard Street overpass at night" class="responsive">
+        <img src="./img/vineyardoverpass.jpg" alt="Vineyard Street overpass at night" class="responsive">
         <div class="social">
           <a href="https://www.linkedin.com/in/wendell-yamada/" alt="LinkedIn Profile">
             <i class="fa-brands fa-linkedin"></i>
@@ -59,4 +59,4 @@
             </a>
           </nav>
         </div>
-      </div>s
+      </div>
